Manejo de lista de usuarios via sockets

--- a/src/app/pages/mensajes/mensajes.component.html
+++ b/src/app/pages/mensajes/mensajes.component.html
@@ -2,6 +2,8 @@
 
 <hr>
 
+<button class="btn btn-danger" type="button" (click)="salir()">Salir</button>
+
 <div class="row">
     <div class="col-12 col-sm-12 col-md-6 col-lg-6">
         <app-lista-usuarios></app-lista-usuarios>
