--- a/src/app/components/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/components/lista-usuarios/lista-usuarios.component.html
@@ -1,3 +1,10 @@
-<p>
-  lista-usuarios works!
-</p>
+<h1>Usuarios</h1>
+
+<ul class="list-group">
+    <li class="list-group-item" *ngFor="let usuario of usuariosActivosObs | async">
+        {{ usuario.nombre }}
+        <span class="badge badge-primary">{{ usuario.sala }}</span>
+        <br>
+        <span class="badge badge-secondary">{{ usuario.id }}</span>
+    </li>
+</ul>
